syntax simplification of switch